@@ -1,14 +1,21 @@
 {
-  "timestamp" : "2022-03-26T08:12:51Z",
+  "timestamp" : "2022-03-30T00:52:05Z",
   "count_outdated" : 235,
   "uniques_outdated" : 109,
-  "count" : 237,
-  "uniques" : 110,
+  "count" : 238,
+  "uniques" : 111,
   "clones" : [
     {
       "timestamp": "2022-03-26T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-03-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
